--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 # CUDA support for GPU kernels
 cust = "0.3.2"
+lazy_static = "1.4"
 
 # Serialization for config and state
 serde = { version = "1.0", features = ["derive"] }
